# Repertoirs

./: .gitignore  docker-compose.yml
backend/: Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  paths.py  repertoire.py  run.py  sample.json  test_request.py
backend/app/files/: composers.csv
backend/app/frontend/: index.html
backend/app/frontend/css/: style.css
backend/app/frontend/js/: index.js
